# IT-project-new

./: README.md  pyproject.toml  requirements.txt
IT-project-api_kinopoisk/: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.md  team.md
IT-project-api_kinopoisk/KniggaPoisk/: account_info.py  account_login.py  main.py
IT-project-api_kinopoisk/KniggaPoisk/database/: account_info.db  reviews_film.db
IT-project-api_kinopoisk/Parser_IMDB/data/parser_films_IMDb/: ParserIMDB_1_part.py  ParserIMDB_2_part.py  ParserIMDB_3_part.py
IT-project-api_kinopoisk/Parser_mybook/: main.py  parser_url.py
IT-project-api_kinopoisk/api_kinopoisk/: api_kinopoisk.py
IT-project-api_kinopoisk/django/: manage.py
IT-project-api_kinopoisk/django/ITproject/: asgi.py  settings.py  urls.py  wsgi.py
IT-project-api_kinopoisk/django/chat/: forms.py  urls.py  utils.py  views.py
IT-project-api_kinopoisk/django/movies/: admin.py  api_kinopoisk.py  forms.py  models.py  urls.py  views.py
IT-project-api_kinopoisk/django/movies/migrations/: 0001_initial.py  0002_alter_ratingstar_options_alter_movie_year.py
IT-project-api_kinopoisk/django/movies/templatetags/: movie_tag.py
IT-project-api_kinopoisk/django/templates/: base.html
IT-project-api_kinopoisk/django/templates/chat/: chat.html
IT-project-api_kinopoisk/django/templates/include/: footer.html  header.html
IT-project-api_kinopoisk/django/templates/movies/: api_search.html  movie_detail2.html
IT-project-api_kinopoisk/django/templates/movies/tags/: last_movie.html
